--- a/template/app/src/main/res/values/colors.xml
+++ b/template/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
-    <color name="primary_light">#C5CAE9</color>
-    <color name="accent">#FF4081</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
-    <color name="white">#ffffff</color>
-    <color name="black">#000000</color>
+    <color name="template_primary">#3295ba</color>
+    <color name="template_primary_dark">#1785AA</color>
+    <color name="template_primary_light">#C5CAE9</color>
+    <color name="template_accent">#1eaaf1</color>
+    <color name="template_primary_text">#212121</color>
+    <color name="template_secondary_text">#727272</color>
+    <color name="template_icons">#FFFFFF</color>
+    <color name="template_divider">#B6B6B6</color>
+    <color name="template_white">#ffffff</color>
+    <color name="template_black">#000000</color>
 </resources>
