New version (0.9.3-beta-2) - it finally works!

--- a/template/app/src/main/res/values/colors.xml
+++ b/template/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="template_divider">#B6B6B6</color>
     <color name="template_white">#ffffff</color>
     <color name="template_black">#000000</color>
+
+    <color name="widget_title_text_color">#525252</color>
+    <color name="widget_subtitle_text_color">#525252</color>
 </resources>
