--- a/sample/app/src/main/res/values/colors.xml
+++ b/sample/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="divider">#B6B6B6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+
+    <color name="widget_title_text_color">#525252</color>
+    <color name="widget_subtitle_text_color">#525252</color>
 </resources>
